--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ timezone:      null
 title: Jekyll Theme
 description: Just another Jekyll theme design and code by zhanxin.info.
 keywords: Jekyll Theme
-url: http://linqunxuan.github.io/kunka
+url: https://linqunxuan.github.io/kunka
 feed: /atom.xml
 favicon: http://jekyllrb.com/favicon.png
 
