--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ nav:
     url: /categories.html
   - text: 文章归档
     url: /archives.html
-  - text: 联系我
+  - text: 关于我
     url: /contact.html
 #  - text: 友情链接
 #    url: /links.html
