修改基本的头像

--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ nav:
 author:
     name: Json
     email: 304721841@qq.com
-    imageLink: http://tp2.sinaimg.cn/1832671293/180/40020872447/1
+    imageLink: http://oqlp7mlvn.bkt.clouddn.com/logo.jpg
     simpleIntro: Never say die.
     detailIntro:
       <p>8年以上电商广告系统、新闻资讯推荐系统的架构与开发经验。 </p>
