--- a/_config.yml
+++ b/_config.yml
@@ -66,9 +66,9 @@ author:
     imageLink: http://oqlp7mlvn.bkt.clouddn.com/logo.jpg
     simpleIntro: Never say die.
     detailIntro:
-      <p>目前在网易工作</p>
-      <p>8年以上电商广告系统、新闻资讯推荐系统等方面的技术研发和lead管理工作。</p>
+      <p>8年以上电商互联网广告、新闻资讯个性化推荐、算法、模型等方面的技术研发和lead管理工作。</p>
       <p>关注大规模数据处理，包括Hadoop，YARN，MapReduce，Spark等。</p>
+      <p>目前在网易工作</p>
 
 #Follow me, you can choose your icon by http://fortawesome.github.io/Font-Awesome/icons/#brand
 follow:
